--- a/PeerSim/.classpath
+++ b/PeerSim/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="lib" path="djep-1.0.0.jar"/>
 	<classpathentry kind="lib" path="jep-2.3.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
